style: set backgroundimg attributes

--- a/index.html
+++ b/index.html
@@ -7,5 +7,21 @@
     <link rel="stylesheet" href="./css/stylesheet.css" />
     <script src="./js/main.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="page">
+      <div class="page__container page__containerImg">
+        <div class="companyArea">
+          <p>MY COMPANY</p>
+        </div>
+        <p>&copy; Marco Nawroth 2024</p>
+      </div>
+      <div class="page__container page__containerForm">
+        <form action="#" class="form">
+          <div class="form__Area form__AreaHeadline"></div>
+          <div class="form__Area form__AreaInputs"></div>
+          <div class="form__Area form__AreaConfirmation"></div>
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
