--- a/index.html
+++ b/index.html
@@ -17,9 +17,42 @@
       </div>
       <div class="page__container page__containerForm">
         <form action="#" class="form">
-          <div class="form__Area form__AreaHeadline"></div>
-          <div class="form__Area form__AreaInputs"></div>
-          <div class="form__Area form__AreaConfirmation"></div>
+          <div class="form__Area form__AreaHeadline">
+            <!-- tbd -->
+          </div>
+          <div class="form__Area form__AreaInputs">
+            <div class="inputContainer">
+              <h2>Lets's do this!</h2>
+            </div>
+            <div class="inputContainer">
+              <div class="inputContainer__Column">
+                <div class="inputGroup">
+                  <!-- First Name -->
+                </div>
+                <div class="inputGroup">
+                  <!-- EMAIL -->
+                </div>
+                <div class="inputGroup">
+                  <!-- PASSWORD -->
+                </div>
+              </div>
+              <div class="inputContainer__Column">
+                <div class="inputGroup">
+                  <!-- Last Name -->
+                </div>
+                <div class="inputGroup">
+                  <!-- PHONE NUMBER -->
+                </div>
+                <div class="inputGroup">
+                  <!-- CONFIRM PASSWORD -->
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="form__Area form__AreaConfirmation">
+            <button type="submit" class="btn">Create Account</button>
+            <p>Already have an account? <a href="#">Log in</a></p>
+          </div>
         </form>
       </div>
     </div>
