--- a/index.html
+++ b/index.html
@@ -27,24 +27,40 @@
             <div class="inputContainer">
               <div class="inputContainer__Column">
                 <div class="inputGroup">
-                  <!-- First Name -->
+                  <label for="inpFirst">First Name:</label>
+                  <input type="text" name="inpFirst" id="inpFirst" />
+                  <p class="errorMessage">Ich bin ein Fehlertext</p>
                 </div>
                 <div class="inputGroup">
-                  <!-- EMAIL -->
+                  <label for="inpEMAIL">Email:</label>
+                  <input type="email" name="inpEMAIL" id="inpEMAIL" />
+                  <p class="errorMessage">Ich bin ein Fehlertext</p>
                 </div>
                 <div class="inputGroup">
-                  <!-- PASSWORD -->
+                  <label for="inpPassword">Password:</label>
+                  <input type="password" name="inpPassword" id="inpPassword" />
+                  <p class="errorMessage">Ich bin ein Fehlertext</p>
                 </div>
               </div>
               <div class="inputContainer__Column">
                 <div class="inputGroup">
-                  <!-- Last Name -->
+                  <label for="inpLast">Last Name:</label>
+                  <input type="text" name="inpLast" id="inpLast" />
+                  <p class="errorMessage">Ich bin ein Fehlertext</p>
                 </div>
                 <div class="inputGroup">
-                  <!-- PHONE NUMBER -->
+                  <label for="inpPhone">Phone:</label>
+                  <input type="tel" name="inpPhone" id="inpPhone" />
+                  <p class="errorMessage">Ich bin ein Fehlertext</p>
                 </div>
                 <div class="inputGroup">
-                  <!-- CONFIRM PASSWORD -->
+                  <label for="inpConfirmPassword">Confirm Password:</label>
+                  <input
+                    type="password"
+                    name="inpConfirmPassword"
+                    id="inpConfirmPassword"
+                  />
+                  <p class="errorMessage">Ich bin ein Fehlertext</p>
                 </div>
               </div>
             </div>
