--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
       <div class="page__container page__containerForm">
         <form action="#" class="form">
           <div class="form__Area form__AreaHeadline">
-            <!-- tbd -->
+            <p>
+              This is not a real online service! You know you need something
+              like this in your life to help you realize your deepest dreams.
+              Sign up now to get startet.
+            </p>
+            <p>You know you want to.</p>
           </div>
           <div class="form__Area form__AreaInputs">
             <div class="inputContainer">
