--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <div class="page">
       <div class="page__container page__containerImg">
         <div class="companyArea">
-          <p>MY COMPANY</p>
+          <img src="./img/odin-lined.png" alt="logo" />
+          <p>MYCOMPANY</p>
         </div>
-        <p>&copy; Marco Nawroth 2024</p>
+        <p class="copyright">&copy; Marco Nawroth 2024</p>
       </div>
       <div class="page__container page__containerForm">
         <form action="#" class="form">
