--- a/index.html
+++ b/index.html
@@ -32,36 +32,62 @@
             </div>
             <div class="inputContainer">
               <div class="inputContainer__Column">
-                <div class="inputGroup">
+                <div class="inpGroup">
                   <label for="inpFirst">First Name:</label>
-                  <input type="text" name="inpFirst" id="inpFirst" />
+                  <input
+                    class="stdInput"
+                    type="text"
+                    name="inpFirst"
+                    id="inpFirst"
+                  />
                   <p class="errorMessage">Ich bin ein Fehlertext</p>
                 </div>
-                <div class="inputGroup">
+                <div class="inpGroup">
                   <label for="inpEMAIL">Email:</label>
-                  <input type="email" name="inpEMAIL" id="inpEMAIL" />
+                  <input
+                    class="stdInput"
+                    type="email"
+                    name="inpEMAIL"
+                    id="inpEMAIL"
+                  />
                   <p class="errorMessage">Ich bin ein Fehlertext</p>
                 </div>
-                <div class="inputGroup">
+                <div class="inpGroup">
                   <label for="inpPassword">Password:</label>
-                  <input type="password" name="inpPassword" id="inpPassword" />
+                  <input
+                    class="stdInput"
+                    type="password"
+                    name="inpPassword"
+                    id="inpPassword"
+                  />
                   <p class="errorMessage">Ich bin ein Fehlertext</p>
                 </div>
               </div>
               <div class="inputContainer__Column">
-                <div class="inputGroup">
+                <div class="inpGroup">
                   <label for="inpLast">Last Name:</label>
-                  <input type="text" name="inpLast" id="inpLast" />
+                  <input
+                    class="stdInput"
+                    type="text"
+                    name="inpLast"
+                    id="inpLast"
+                  />
                   <p class="errorMessage">Ich bin ein Fehlertext</p>
                 </div>
-                <div class="inputGroup">
+                <div class="inpGroup">
                   <label for="inpPhone">Phone:</label>
-                  <input type="tel" name="inpPhone" id="inpPhone" />
+                  <input
+                    class="stdInput"
+                    type="tel"
+                    name="inpPhone"
+                    id="inpPhone"
+                  />
                   <p class="errorMessage">Ich bin ein Fehlertext</p>
                 </div>
-                <div class="inputGroup">
+                <div class="inpGroup">
                   <label for="inpConfirmPassword">Confirm Password:</label>
                   <input
+                    class="stdInput"
                     type="password"
                     name="inpConfirmPassword"
                     id="inpConfirmPassword"
