add: fontkit folder

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                     type="text"
                     name="inpLast"
                     id="inpLast"
+                    required
                   />
                   <p class="errorMessage">Ich bin ein Fehlertext</p>
                 </div>
