--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p class="copyright">&copy; Marco Nawroth 2024</p>
       </div>
       <div class="page__container page__containerForm">
-        <form action="#" class="form">
+        <form action="https://httpbin.org/post" method="post" class="form">
           <div class="form__Area form__AreaHeadline">
             <p>
               This is not a real online service! You know you need something
